--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set -g default-terminal "xterm-256color"
 set -g mode-keys vi
 
 # Enable extended mouse mode
-set mouse-utf8 on
+set -g mouse-utf8 on
 
 # tmux powerline setup
 set-option -g status on
